k8s/apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 3001
        runAsGroup: 3000
        fsGroup: 3000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 13378
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
            - name: audiobooks
              mountPath: /audiobooks
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata
        - name: audiobooks
          nfs:
            server: 192.168.2.116
            path: /mnt/Volume/Files/Media/Audiobooks
            readOnly: true
